# Panda_Amr_Face_Tracking

./: LICENSE.txt  README.md  gitignore.txt
panda_amr_tutorial/: CMakeLists.txt  package.xml
panda_amr_tutorial/include/panda_amr_tutorial/: grid_motion_node.h  joint_grid_generator.h  panda_arm_controller.h  panda_arm_controller_pose.h  planning_scene_manager.h
panda_amr_tutorial/launch/: amr_controller.launch  eef_relative_move.launch  move_group_cpp.launch  panda_tutorial.launch  start_joint.launch
panda_amr_tutorial/src/: a.cpp  amr_controller.cpp  eef_relative_move.cpp  eef_relative_move.cpp_1bak  eef_relative_move.cpp_2bak  grid_motion_node.cpp  grid_motion_node.cpp_bak1  joint_grid_generator.cpp  joint_grid_generator.cpp_bak  main.cpp  main.cpp_bak  move_group_cpp.cpp  move_group_cpp.cpp_bak  panda_arm_controller.cpp  panda_arm_controller_pose.cpp  panda_tutorial.cpp  panda_tutorial.cpp_bak  panda_tutorial.cpp_bak1  planning_scene_manager.cpp  start  start_joint.cpp
yolov5_ros/src/: face_detect.py_1bak  face_detect.py_3bak  face_detect.py_bak
